[package]
name = "tile_collapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
image = "0.24.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.141", features = ["derive"] }
toml = "0.5.9"
