[package]
name = "tile_collapse"
version = "0.3.0"
authors = ["zoomiti"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
keywords = ["graphics"]
categories = ["command-line-utilities"]
repository = "https://github.com/zoomiti/tile_collapse"
description = "An implementation of the Wave Function Collapse algorithm for creating images from tilesets and adjacency data"

[lib]
name = "tile_collapse"
path = "src/lib.rs"

[[bin]]
name = "tile_collapse"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
image = "0.24.3"
indicatif = "0.17.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.141", features = ["derive"] }
toml = "0.5.9"
